# Krom

./: .LICENSE.un~  .README.md.un~  .readme.md.un~  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  krom
assets/asm/: main.asm
assets/clang-asm/: main.s
assets/llvm-ir/: main.ll
assets/preprocessor/: lexer.i  (+2 more)
examples/: .queue.kdev.un~  .readme.md.un~  queue.kdev  readme.md
lib/: .AstNode.h.un~  .CppProgram.h.un~  .ErrorHandler.h.un~  .KromProgram.h.un~  .msclStringFuncs.h.un~  AstNode.h  CppProgram.h  ErrorHandler.h  KromProgram.h  lexer.h  lexer.hpp  msclStringFuncs.h  token.h
src/: .AllOperators.cpp.un~  .AstNode.cpp.un~  .CppProgram.cpp.un~  .ErrorHandler.cpp.un~  .KromProgram.cpp.un~  .KromStdLib.cpp.un~  .Lexer.cpp.un~  .Namespace.cpp.un~  .Parser.cpp.un~  .ResolveLiteral.cpp.un~  .SourceFile.cpp.un~  .StackFrame.cpp.un~  .Token.cpp.un~  .Type.cpp.un~  .main.cpp.un~  .msclStringFuncs.cpp.un~  AllOperators.cpp  AstNode.cpp  CppProgram.cpp  ErrorHandler.cpp  KromProgram.cpp  KromStdLib.cpp  Lexer.cpp  Namespace.cpp  Parser.cpp  ResolveLiteral.cpp  SourceFile.cpp  StackFrame.cpp  Token.cpp  Type.cpp  main.c  main.cpp  main.cxx  msclStringFuncs.cpp
tutorials/: .0_setting_up.md.un~  .1_basic_concepts.md.un~  .2_control_flow.md.un~  .3_strings_and_input.md.un~  .4_structures_and_functions.md.un~  .5_whatevs.md.un~  .6_transpiling_to_cpp.md.un~  .7_temporary_hacks.md.un~  0_setting_up.md  1_basic_concepts.md  2_control_flow.md  3_strings_and_input.md  4_structures_and_functions.md  5_whatevs.md  6_transpiling_to_cpp.md  7_temporary_hacks.md  index.md
(+30 files in other folders)
